--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,11 +1,6 @@
 fixtures:
-  repositories:
-    "stdlib":
-      "repo": "git://github.com/puppetlabs/puppetlabs-stdlib.git"
-      "ref": "v2.2.1"
-    "firewall":
-      "repo": "git://github.com/puppetlabs/puppetlabs-firewall.git"
-      "ref": "1.3.0"
-  symlinks:
+  forge_modules:
+    firewall: 'puppetlabs/firewall'
+    stdlib: 'puppetlabs/stdlib'
   symlinks:
     "strongswan": "#{source_dir}"
