--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ script:
   - "bundle exec rake lint"
   - "bundle exec rake spec SPEC_OPTS='--format documentation --color'"
 rvm:
-  - 1.8.7
   - 1.9.3
   - 2.0.0
 env:
  - PUPPET_GEM_VERSION="~> 3.4.0"
  - PUPPET_GEM_VERSION="~> 3.5.0"
+ - PUPPET_GEM_VERSION="~> 5.3.2"
